# ros-stereo-image-saver

./: CMakeLists.txt  README.md  package.xml
src/: stereo_image_saver.cpp
